MMCPA-2655: Fixing registration complete header alignment on tablet.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/user/_user.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/user/_user.scss
@@ -841,7 +841,7 @@
     padding-bottom: 1rem;
 
     @include breakpoint($only-tablet) {
-      padding: 0 1rem;
+      padding: 0 1rem 1rem;
     }
   }
 
